# selective-speaker

./: .gitignore  ANDROID_COMPLETE.md  ANDROID_DISTRIBUTION.md  ASSEMBLYAI_INTEGRATION.md  CLOUDINARY_SETUP.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DOWNLOAD.md  FIREBASE_SETUP.md  GETTING_STARTED.md  GOOGLE_PLAY_SUBMISSION.md  INTEGRATION_COMPLETE.md  NEXT_STEPS.md  PLAY_STORE_CHECKLIST.md  PRIVACY_POLICY.md  PRODUCTION_READY_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_FIREBASE_DISTRIBUTION.sh  README.md  alembic.ini  brainstorm.md  docker-compose.yml  pyproject.toml  requirements.txt  selective_speaker_backend_skeleton_fast_api.md  start_backend_for_phone.sh  startup.sh
android/: README.md  SETUP.md  SIGNING_SETUP.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_enrollment.xml  activity_main.xml  activity_sign_in.xml  item_utterance.xml
android/app/src/main/res/menu/: main_menu.xml
android/app/src/main/res/mipmap-hdpi/: ic_launcher_round.xml
app/: config.py  db.py  dependencies.py  main.py  models.py  schemas.py  storage.py
app/routes/: audio.py  chunks.py  enrollment.py  utterances.py  webhooks.py
app/services/: assemblyai_client.py  cloud_storage.py  diarization_mapper.py  firebase_auth.py  geocoding.py  speaker_verification.py
app/utils/: audio.py  audio_extraction.py
scripts/: local_map_segments.py  quickstart.sh
tests/: test_diarization_mapper.py
tests/fixtures/: sample_stt.json
(+15 files in other folders)
