[project]
name = "selective-speaker-backend"
version = "0.1.0"
description = "FastAPI backend for diarization-only selective speaker transcription"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.0",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.2",
  "python-dotenv>=1.0",
  "alembic>=1.13",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "loguru>=0.7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[tool.pytest.ini_options]
pythonpath = ["app"]

